# mobile_robot_project

./: .gitignore  .gitmodules  less  rviz.rviz
Arduino/cool_robot/: cool_robot.ino  encoder_wraper.h  l298n.h  robot.h
Arduino/cp1/: cp1.ino
Arduino/cp2/: cp2.ino  robot.h
Arduino/cp3/: cp3.ino  robot.h
Arduino/cp4/: PinDefinitionsAndMore.h  cp4.ino  robot.h
Arduino/libraries/ros_lib/: ArduinoHardware.h
Arduino/rosserial_test/: rosserial_test.ino
Arduino/step_response/: step_response.ino
docker/: Dockerfile  run.sh
src/: haha.rviz
src/camera/: CMakeLists.txt  package.xml
src/camera/src/: webcam.cpp
src/cool_robot/: CMakeLists.txt  package.xml
src/cool_robot/config/: RTIMULib.ini  diff.yaml  ekf.yaml  imu_calib.yaml  move_base_params.yaml
src/cool_robot/launch/: lidar.launch  localization.launch  main.launch  nav.launch  odom.launch  serial.launch
src/cool_robot/src/: cmd_vel_transformaer.cpp  odom_pub.cpp
src/cp1/launch/: cp1.launch
src/cp1/src/: cp1.cpp
src/cp2/: CMakeLists.txt  package.xml
src/cp2/launch/: cp2.launch
src/cp2/src/: cp2.cpp
src/cp3/: CMakeLists.txt  package.xml
src/cp3/launch/: cp3.launch
src/cp3/src/: cp3.cpp
src/cp4/: CMakeLists.txt  package.xml
src/cp4/launch/: cp4.launch
src/cp4/src/: cp4.cpp
src/fastslam_localization/launch/: final_lab_simulation.launch  localization.launch
src/fastslam_localization/src/: Plot.py  VehicleModel.cpp  fake_camera.cpp  fake_odom.cpp  fastSLAM_localization.cpp  localization.cpp  map_redesign.csv  pure_pursuit.py  route.py  trajectorysmooth.py
src/lab1/: CMakeLists.txt  package.xml
src/lab1/include/square_control/: util.h  velocity_profile.h
src/lab1/launch/: lab1.launch
src/lab1/src/: square_control.cpp
src/lab2/: CMakeLists.txt  package.xml
src/lab2/launch/: free_space.launch  lab2.launch
src/lab2/src/: robot_control.cpp
src/lab3/: CMakeLists.txt  package.xml
src/lab3/example/: a_star.cpp
src/lab3/include/lab3/: a_star.h
src/lab3/launch/: final.launch  lab3.launch  lab6.launch
src/lab3/params/: costmap.yaml
src/lab3/params/navigation/: global_planner_params.yaml  move_base_params.yaml
src/lab3/params/navigation/costmap/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/lab3/params/navigation/local_planner/: dwa_local_planner_params.yaml  teb_local_planner_params.yaml
src/lab3/rviz/: default.rviz  lidar_nav.rviz
src/lab3/src/: a_star.cpp  main.cpp
src/path_folder/: output_point2_3.csv  path.csv  path.xlsx  path2.csv  path2.xlsx  path2_modify.csv  path2_modify.xlsx  path2_modify2.csv  path2_modify2.xlsx  path_simplify.csv  path_simplify.xlsx
src/pure_pursuit/: CMakeLists.txt  package.xml
src/pure_pursuit/include/pure_pursuit/: util.h
src/pure_pursuit/launch/: pure_pursuit.launch
src/pure_pursuit/params/: pure_pursuit.yaml
src/pure_pursuit/src/: my.cpp  pure_pursuit.cpp
src/simulation_env/: .gitignore  CMakeLists.txt  check_ROS_setting.sh  reset_ROS_IP.sh  set_ROS_IP.sh
src/simulation_env/config/: diffdrive.yaml
src/simulation_env/launch/: A_star_map.launch  Base.launch  Base_ns.launch  Obstacle.launch  Odometry.launch  Put_car.launch  amcl_ns.launch  free_space.launch  g1_Put_car.launch  g2_Put_car.launch  g3_Put_car.launch  keyboard_teleop.launch  move_base.launch  simulation_test.launch  simulation_test_Final.launch  standalone.launch  test.launch
src/simulation_env/map/: 1F_2.pgm  1F_2.yaml  5F.pgm  5F.yaml  Final_ver1.pgm  Final_ver1.yaml  Final_ver2.pgm  Final_ver2.yaml  free_space.yaml  sim_map.pgm  sim_map.yaml  square_world.yaml
src/simulation_env/src/: Interface.py  (+8 more)
(+19 files in other folders)
