<?xml version="1.0"?>
<package format="2">
  <name>pure_pursuit</name>
  <version>0.0.0</version>
  <description>Lab 1 package</description>
  <author>Sunfu-Chou</author>
  <maintainer email="nvidia@todo.todo">nvidia</maintainer>

  <license>NONE</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>

</package>
